# critical_path

./: pyproject.toml  scratch.ipynb
j30/: Untitled.ipynb
scripts/: dual_cpm_csv.py  psplib_loader.py  test_cpm_sm.py  test_psplib_batch_old.py  validate_j30_sm.py
scripts/.ipynb_checkpoints/: test_cpm_sm-checkpoint.py
scripts/cpm_sm_validation/: test_cpm_sm.py  validate_j30_1sm.py  validate_j30_batch.py
src/critical_path/: Menu.py  Menu2.0.py  Menu_Old.py  PM_Assistant.py  scratch.ipynb
src/critical_path/cpm/: Menu.py  analytics_engine.py  app.py  dual_cpm_csv.py  exec_summary.py  executive_engine.py  prediction_engine.py  recovery_engine.py
src/critical_path/cpm/pages/: 01_Executive_Overview.py
src/critical_path/pages/: 01_Executive_Overview.py  01_Schedule_Validator_(DO_THIS_FIRST).py  02_Executive_Overview.py  03_Fix_The_Schedule.py  03_Schedule_Options.py  04_Analytics.py  05_Prediction_Engine.py  05_Predictive_Insights.py  06_FAQ_&_Glossary.py
src/critical_path/psplib/: loader.py  psplib_loader.py
src/critical_path/tests/: test_critical_path.py
src/critical_path/validation/: schedule_validator.py  test_cpm_sm.py  validate_j30_1sm.py  validate_j30_batch.py
synthetic_schedules/: schedule1.csv  test_schedule1.csv
